--- a/homer-config.yml
+++ b/homer-config.yml
@@ -4,7 +4,7 @@
 
 title: "MintyClouds"
 subtitle: "Dashboard"
-logo: "logo.png"
+logo: "assets/mintyclouds-logo.png"
 # icon: "fas fa-skull-crossbones" # Optional icon
 
 header: true
