Add previous ChronoGate setup to Rattlesnake bundle

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,28 @@
 HOSTNAME=domain.io
 
-# HEIMDALL_VERSION=2.2.2-ls137
-# 
-# HEIMDALL_CONFIG_PATH=/srv/rattlesnake-bundle/docker_data/heimdall
-# HEIMDALL_PORT=9000
+# Portainer
+PORTAINER_AGENT_VERSION=2.6.2
+PORTAINER_VERSION=2.6.2
+PORTAINER_CONFIG_PATH=/path/to/docker_data/portainer
 
+# I'm setting the versions here, for easy change
+TRAEFIK_VERSION=v2.5.3
+TRAEFIK_CONFIG_PATH=/path/to/docker_data/traefik
+
+# The domain name for all services
+DOMAIN=rootdomain.io
+
+# Email for Let's Encrypt certificates
+LETSENCRYPT_EMAIL=user@example.io
+
+# Authelia
+AUTHELIA_VERSION=4.30.4
+AUTHELIA_CONFIG_PATH=/path/to/docker_data/authelia
+AUTHELIA_JWT_SECRET=SOMEJWTSECRETPLACEDHERE
+AUTHELIA_REDIS_PASSWORD=myredispassword
+AUTHELIA_POSTGRES_PASSWORD=mypostgrespassword
+AUTHELIA_SMTP_PASSWORD=mysmtppassword
+
+# Homer
 HOMER_VERSION=21.07.1
     
-# HOMER_CONFIG_PATH=/path/to/your/config.yaml
-HOMER_PORT=12345
