--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,10 @@ AUTHELIA_SMTP_PASSWORD=mysmtppassword
 
 # Homer
 HOMER_VERSION=21.07.1
-    
+
+# Wiki.js
+WIKIJS_POSTGRES_HOST=domain.io
+WIKIJS_POSTGRES_PORT=5432
+WIKIJS_POSTGRES_USER=wikijspguser
+WIKIJS_POSTGRES_PASSWORD=wikijspgpassword
+WIKIJS_POSTGRES_DB=wikijspgdb
