Move Authelia dependencies from Viper VM

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,21 @@ DOMAIN=rootdomain.io
 # Email for Let's Encrypt certificates
 LETSENCRYPT_EMAIL=user@example.io
 
+
+# Authelia - Redis
+AUTHELIA_REDIS_VERSION=6.2.5-alpine
+AUTHELIA_REDIS_PASSWORD=autheliaredispassword
+AUTHELIA_REDIS_DATA_PATH=/path/to/appstorage/authelia/redis
+AUTHELIA_REDIS_PORT=1101
+
+# Authelia - PostgreSQL
+AUTHELIA_POSTGRES_VERSION=13.4-buster
+AUTHELIA_POSTGRES_PASSWORD=autheliapgpassword
+AUTHELIA_POSTGRES_USER=authelia
+AUTHELIA_POSTGRES_DB=authelia
+AUTHELIA_POSTGRES_DATA_PATH=/path/to/appstorage/authelia/postgres
+AUTHELIA_POSTGRES_PORT=1102
+
 # Authelia
 AUTHELIA_VERSION=4.30.4
 AUTHELIA_CONFIG_PATH=/path/to/docker_data/authelia
