--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,36 @@ services:
         protocol: tcp
         mode: host
 
+  # Authelia - Redis
+  authelia-redis:
+    image: redis:${AUTHELIA_REDIS_VERSION}
+    container_name: authelia-redis
+    restart: unless-stopped
+    # user: "${SYSTEM_USER}"
+    command: redis-server /usr/local/etc/redis/redis.conf
+    environment:
+      TZ: Europe/Moscow
+    volumes:
+      - ./authelia-redis.conf:/usr/local/etc/redis/redis.conf
+      - ${AUTHELIA_REDIS_DATA_PATH}:/data
+    # ports:
+    #   - "${AUTHELIA_REDIS_PORT}:6379"
+
+  # Authelia - PostgreSQL
+  authelia-postgresql:
+    image: postgres:${AUTHELIA_POSTGRES_VERSION}
+    container_name: authelia-postgresql
+    restart: unless-stopped
+    # user: "${SYSTEM_USER}"
+    environment:
+      POSTGRES_PASSWORD: "${AUTHELIA_POSTGRES_PASSWORD}"
+      POSTGRES_USER: "${AUTHELIA_POSTGRES_USER}"
+      POSTGRES_DB: "${AUTHELIA_POSTGRES_DB}"
+    # ports:
+    #   - "${AUTHELIA_POSTGRES_PORT}:5432"
+    volumes:
+      - ${AUTHELIA_POSTGRES_DATA_PATH}:/var/lib/postgresql/data
+
   # Authelia
   authelia:
     image: authelia/authelia:${AUTHELIA_VERSION}
@@ -110,6 +140,9 @@ services:
       traefik.http.middlewares.authelia.forwardauth.address: 'http://authelia:9091/api/verify?rd=https://authelia.mintyclouds.in'  # yamllint disable-line rule:line-length
       traefik.http.middlewares.authelia.forwardauth.trustForwardHeader: 'true'
       traefik.http.middlewares.authelia.forwardauth.authResponseHeaders: 'Remote-User,Remote-Groups,Remote-Name,Remote-Email'  # yamllint disable-line rule:line-length    
+    depends_on:
+      - authelia-redis
+      - authelia-postgresql
     
   
 networks:
