--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 HOSTNAME=domain.io
 
-# Portainer
-PORTAINER_AGENT_VERSION=2.6.2
-PORTAINER_VERSION=2.6.2
-PORTAINER_CONFIG_PATH=/path/to/docker_data/portainer
+# # Portainer
+# PORTAINER_AGENT_VERSION=2.6.2
+# PORTAINER_VERSION=2.6.2
+# PORTAINER_CONFIG_PATH=/path/to/docker_data/portainer
 
 # I'm setting the versions here, for easy change
 TRAEFIK_VERSION=v2.5.3
@@ -20,7 +20,6 @@ LETSENCRYPT_EMAIL=user@example.io
 AUTHELIA_REDIS_VERSION=6.2.5-alpine
 AUTHELIA_REDIS_PASSWORD=autheliaredispassword
 AUTHELIA_REDIS_DATA_PATH=/path/to/appstorage/authelia/redis
-AUTHELIA_REDIS_PORT=1101
 
 # Authelia - PostgreSQL
 AUTHELIA_POSTGRES_VERSION=13.4-buster
@@ -28,7 +27,6 @@ AUTHELIA_POSTGRES_PASSWORD=autheliapgpassword
 AUTHELIA_POSTGRES_USER=authelia
 AUTHELIA_POSTGRES_DB=authelia
 AUTHELIA_POSTGRES_DATA_PATH=/path/to/appstorage/authelia/postgres
-AUTHELIA_POSTGRES_PORT=1102
 
 # Authelia
 AUTHELIA_VERSION=4.30.4
