Update docker services on traefik, add MFA, tailscale, homepage

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DOMAIN=rootdomain.io
 # Email for Let's Encrypt certificates
 LETSENCRYPT_EMAIL=user@example.io
 
+CF_API_EMAIL=
+CF_API_KEY=
+CF_DNS_API_TOKEN=
+
 
 # Authelia - Redis
 AUTHELIA_REDIS_VERSION=6.2.5-alpine
@@ -35,3 +39,25 @@ AUTHELIA_JWT_SECRET=SOMEJWTSECRETPLACEDHERE
 AUTHELIA_REDIS_PASSWORD=myredispassword
 AUTHELIA_POSTGRES_PASSWORD=mypostgrespassword
 AUTHELIA_SMTP_PASSWORD=mysmtppassword
+
+AUTHELIA_PORT=8000
+
+
+HOMER_VERSION=21.07.1
+
+HOMER_CONFIG_PATH=/srv/rattlesnake-bundle/docker_data/homer/config.yml
+
+
+TAILSCALE_CONFIG_PATH=/path/to/appstorage/tailscale
+TAILSCALE_AUTHKEY=tskey-auth-XXXXXXXXX
+TAILSCALE_HOSTNAME=myhostname
+
+GETHOMEPAGE_CONFIG_PATH=/path/to/appstorage/gethomepage/config
+GETHOMEPAGE_IMAGES_PATH=/path/to/appstorage/gethomepage/images
+GETHOMEPAGE_PORT=8080
+
+
+# Make sure you set the correct variables below!
+# Cloudflare
+# CF_DNS_API_TOKEN=VkJGIdNKExYiZscWuicIv6hh09nO9GoBbINdO6qk: ADD YOUR CF_DNS_API_TOKEN here
+# CF_ZONE_API_TOKEN=VkJGIdNKExYiZscWuicIv6hh09nO9GoBbINdO6qk: ADD YOUR CF_ZONE_API_TOKEN here
